# freebucket

./: Cargo.toml  README.md
freebucket_data/test-bucket/: .bucket_meta.json
freebucket_data/test-bucket/.meta/: test.txt.json
freebucket_data/test-bucket/objects/: test.txt
src/: cli.rs  config.rs  dashboard.rs  error.rs  handlers.rs  main.rs  models.rs  storage.rs
