[package]
name = "freebucket"
version = "0.1.0"
edition = "2021"
description = "A local S3-compatible storage bucket service"
authors = ["FreeBucket"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
bytes = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["io"] }
